# Sentinel

./: .gitignore  README.md  blocklist  pyproject.toml  sentinel.example.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: fmt.ts
frontend/src/pages/: Blocklist.tsx  Dashboard.tsx  Devices.tsx  Dns.tsx  Events.tsx  Topology.tsx  Whitelist.tsx
frontend/src/types/: api.ts
scripts/: setup_pi.sh
sentinel/: blocklist.txt  main.py  whitelist.txt
sentinel/api/: app.py
sentinel/api/templates/: base.html  devices.html  dns.html  events.html  index.html  topology.html
sentinel/api/templates/partials/: alerts.html  devices.html  stats.html
sentinel/cli/: query.py  shell.py
sentinel/collectors/: arp_watcher.py  bandwidth_tracker.py  dhcp_monitor.py  dns_monitor.py  http_monitor.py  icmp_monitor.py  port_scanner.py  sniffer.py  tls_monitor.py
sentinel/core/: database.py  enrichment.py  event_bus.py  notifier.py  rules_engine.py  threat_feeds.py
tests/: test_api_app.py  test_bandwidth_tracker.py  test_collectors.py  test_database.py  test_enrichment.py  test_event_bus.py  test_main.py  test_notifier.py  test_port_scanner.py  test_query.py  test_rules_engine.py  test_shell.py  test_threat_feeds.py
