[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Local network security monitoring suite"
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.5",
    "aiosqlite>=0.19",
    "rich>=13",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[project.scripts]
sentinel = "sentinel.main:main"
sentinel-query = "sentinel.cli.query:main"
sentinel-shell = "sentinel.cli.shell:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"